--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,15 @@ li {
   background-color: red;
 }
 
+.intro {
+  border: 3px solid;
+  text-align: left;
+  background-color: black;
+  color: green;
+  font-weight: bold;
+  font-size:18px;
+}
+
 .header {
   font-size: 35px;
   font-weight: bold;
