used chatGPT to help me conditional render the async if no server

--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,11 @@ li {
   text-align: center;
 }
 
+.error {
+  color: red;
+  font-weight: bold;
+}
+
 .center {
   border: 3px solid;
   text-align: left;
