--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,20 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 li {
   display: inline-block;
-  margin-right: 20px
+  margin-right: 20px;
 }
 
 .title {
@@ -27,7 +27,10 @@ li {
 
 .error {
   color: red;
+  font-size: 75px;
   font-weight: bold;
+  text-align: center;
+  padding-top: 50px;
 }
 
 .center {
@@ -42,7 +45,7 @@ li {
   background-color: black;
   color: green;
   font-weight: bold;
-  font-size:18px;
+  font-size: 18px;
 }
 
 .header {
@@ -67,4 +70,3 @@ li {
 .FancyBorder-red {
   border-color: red;
 }
-
